<resources>
    <string name="app_name">My Sudoku</string>

    <string name="timer">%02d:%02d.%02d</string>
    <string name="completed">Puzzle completed.</string>

    <string name="set_1">1</string>
    <string name="set_2">2</string>
    <string name="set_3">3</string>
    <string name="set_4">4</string>
    <string name="set_5">5</string>
    <string name="set_6">6</string>
    <string name="set_7">7</string>
    <string name="set_8">8</string>
    <string name="set_9">9</string>
    <string name="clear">C</string>

    <string name="easy">Beginner</string>
    <string name="medium">Competent</string>
    <string name="hard">Proficient</string>
    <string name="very_hard">Expert</string>
    <string name="difficulty">Choose difficulty</string>

    <string name="hints">Toggle hints</string>
    <string name="highlight">Toggle highlighting</string>
    <string name="save">Save</string>

    <string name="start">Start game</string>
    <string name="settings">Settings</string>


    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Settings</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_new_main">My Sudoku</string>
</resources>
