<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_marginTop="40dp"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/logo2"
        android:layout_gravity="center"/>

    <Button android:id="@+id/easy"
        android:text="@string/easy"
        android:onClick="puzzleSelection"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_rounded"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        />

    <Button android:id="@+id/medium"
        android:text="@string/medium"
        android:onClick="puzzleSelection"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_rounded"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"/>

    <Button android:id="@+id/hard"
        android:text="@string/hard"
        android:onClick="puzzleSelection"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_rounded"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"/>

    <Button android:id="@+id/very_hard"
        android:text="@string/very_hard"
        android:onClick="puzzleSelection"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_rounded"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"/>

</LinearLayout>