<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PuzzleActivity"
    android:orientation="vertical"
    android:keepScreenOn="true">

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Timer : "
            android:textSize="20dp"
            android:textColor="@android:color/black"/>
        <Chronometer
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="00:00:00"
            android:textSize="20dp"/>
    </LinearLayout>



    <LinearLayout
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="0.65"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="10dp"
        android:layout_marginTop="10dp">
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/puzzle"
            style="@style/SudokuGrid"
            android:layout_width="370dp"
            android:layout_height="370dp"/>
    </LinearLayout>

    <LinearLayout android:gravity="bottom"
        android:layout_weight="0.35"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="30dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <Button
                    android:id="@+id/clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/ic_remove"
                    android:text="Clear"
                    android:textAllCaps="false"
                    android:onClick="updateCellValue"
                    android:background="@drawable/selector"/>
            </LinearLayout>
           <!-- <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
               <Button
                   android:id="@+id/undo"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:drawableTop="@drawable/ic_undo"
                   android:layout_gravity="center"
                   android:text="Undo"
                   android:textAllCaps="false"
                   android:onClick="updateCellValue"
                   android:background="@drawable/selector"/>
            </LinearLayout>-->
            <!--<LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/edit"
                    android:src="@drawable/ic_edit"
                    android:onClick="updateCellValue"
                    />
                <TextView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Off"/>
            </LinearLayout> -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <Button
                    android:id="@+id/hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/ic_lightbulb"
                    android:textAllCaps="false"
                    android:text="Hint"
                    android:onClick="updateCellValue"
                    android:background="@drawable/selector"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp">

            <Button android:id="@+id/nr_1"
                android:text="@string/set_1"
                style="@style/SudokuSelector"
                android:textSize="25dp"/>
            <Button android:id="@+id/nr_2"
                android:text="@string/set_2"
                style="@style/SudokuSelector"
                android:textSize="25dp"/>
            <Button android:id="@+id/nr_3"
                android:text="@string/set_3"
                style="@style/SudokuSelector"
                android:textSize="25dp"/>
            <Button android:id="@+id/nr_4"
                android:text="@string/set_4"
                style="@style/SudokuSelector"
                android:textSize="25dp"/>
            <Button android:id="@+id/nr_5"
                android:text="@string/set_5"
                style="@style/SudokuSelector"
                android:textSize="25dp"/>
            <Button android:id="@+id/nr_6"
                android:text="@string/set_6"
                style="@style/SudokuSelector"
                android:textSize="25dp"/>
            <Button android:id="@+id/nr_7"
                android:text="@string/set_7"
                style="@style/SudokuSelector"
                android:textSize="25dp"/>
            <Button android:id="@+id/nr_8"
                android:text="@string/set_8"
                style="@style/SudokuSelector"
                android:textSize="25dp"/>
            <Button android:id="@+id/nr_9"
                android:text="@string/set_9"
                style="@style/SudokuSelector"
                android:textSize="25dp"/>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>